# AndroidLivePusher

./: README.md  settings.gradle
livepusher/: CMakeLists.txt  build.gradle
livepusher/src/androidTest/java/com/yxt/livepusher/livepusher/: ExampleInstrumentedTest.java
livepusher/src/main/: AndroidManifest.xml
livepusher/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  MessageQueue.cpp  MessageQueue.h  RtmpPush.cpp  RtmpPush.h  push.cpp
livepusher/src/main/java/com/yxt/livepusher/camera/: CameraFboRender.java  CameraRender.java  CameraView.java  YUCamera.java
livepusher/src/main/java/com/yxt/livepusher/egl/: BaseRendeer.java  EglHelper.java  YUEGLSurfaceView.java
livepusher/src/main/java/com/yxt/livepusher/encodec/: BasePushEncoder.java  BaseVideoEncoder.java  EncodecRender.java  MP4VideoExtractor.java  PushEncoder.java  RecordEncoder.java
livepusher/src/main/java/com/yxt/livepusher/network/: NetSocket.java
livepusher/src/main/java/com/yxt/livepusher/network/rtmp/: ConnectListenr.java  RtmpPush.java  (+1 more)
livepusher/src/main/java/com/yxt/livepusher/test/: CameraGLRender.java  EGLSurface.java  YxtStream.java
livepusher/src/main/java/com/yxt/livepusher/utils/: AudioRecordUitl.java  FLV.java  G711Code.java  MessageConversionUtils.java  ShaderUtils.java
livepusher/src/main/java/com/yxt/livepusher/view/: AutoFitTextureView.java
livepusher/src/main/res/raw/: fragment_shader_screen.glsl  vertex_shader.glsl  vertex_shader_screen.glsl
livepusher/src/main/res/values/: strings.xml
livepusher/src/test/java/com/yxt/livepusher/livepusher/: ExampleUnitTest.java
(+8 files in other folders)
